--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "@react-three/drei": "^9.120.0",
+    "@react-three/fiber": "^8.17.10",
     "bootstrap": "^5.3.3",
+    "dat.gui": "^0.7.9",
+    "gsap": "^3.12.5",
     "i18next": "^24.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.1.3"
+    "react-i18next": "^15.1.3",
+    "react-router-dom": "^7.0.2",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
