--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-three/fiber": "^8.17.10",
     "bootstrap": "^5.3.3",
     "dat.gui": "^0.7.9",
+    "formik": "^2.4.6",
     "gsap": "^3.12.5",
     "i18next": "^24.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.3",
-    "three": "^0.171.0"
+    "three": "^0.171.0",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
